# target-redshift

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pythonpublish.yml  security.yml
target_redshift/: __init__.py  db_sync.py
tests/integration/: test_target_redshift.py
tests/mock_integration/: test_target_redshift_mock.py
tests/unit/: test_db_sync.py  test_target_redshift.py
